# headers

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  dev.bat  headers.sln  headers.vcxproj  headers.vcxproj.filters  project.4coder  test.sln
src/: bitmap.h  color.h  cur.h  gif.h  heaps.h  ico.h  linkedlist.h  list.h  main.c  map.h  memory.h  stack.h  types.h
src/formats/: cursor.h  ico.h
